# vetix

./: AGENTS.md  README.md  README_CN.md  config.yaml.example  example.config.yaml  pyproject.toml
skill_scanner/: agent.py  cli.py  config.py  model.py
skill_scanner/prompts/: skill_summary.md
skill_scanner/skill_audit/: graph.py  state.py
skill_scanner/skill_audit/nodes/: code_audit.py  get_base_info.py  skill_summary.py
skill_scanner/utils/: logger.py
vetix/: agent.py  cli.py  model.py
vetix/audit/: graph.py  state.py
vetix/audit/nodes/: code_audit.py  gather_base_info.py  get_base_info.py  skill_summary.py
vetix/audit/schemas/: info.py
vetix/prompts/: code_audit.md
vetix/utils/: banner.py  file_classifier.py  logger.py  utils.py
