[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-scanner-agent"
version = "1.0.0"
description = "Skill Scan Agent — Automated scanning, identification, and assessment of SKILL security risks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "pstruc>=1.0.1",
    "rich>=13.0.0",
    "typer>=0.25.1",
]

[project.scripts]
skill-scanner = "skill_scanner.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skill_scanner"]
