[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vetix"
dynamic = ["version"]
description = "Vetix — Automated scanning, identification, and assessment of SKILL security risks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "json-repair>=0.61.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.2.1",
    "pstruc>=1.0.1",
    "rich>=13.0.0",
    "typer>=0.25.1",
]

[project.scripts]
vetix = "vetix.cli:app"

[tool.hatch.version]
path = "vetix/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["vetix"]
